--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -49,8 +49,15 @@
     </div>
     <% }); %>
 
-    <!-- The list of the groups -->
-
+    <!-- Login Form -->
+    <h1>Sign Up</h1>
+    <form action="/signup" method="post">
+        <input type="text" class="form-control" name="username" placeholder="Username">
+        <input type="text" class="form-control" name="mobile" placeholder="Mobile Number">
+        <input type="text" class="form-control" name="email" placeholder="Email Id">
+        <input type="text" class="form-control" name="password" placeholder="Password">
+        <input type="submit" value="Sign Up" class="btn btn-primary btn-block">
+    </form>
 </div>
+
 </body>
-<% include _footer.ejs %>
