Add Signup , Login and Logout Routers

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,9 @@
         <ul class="nav navbar-nav navbar-right">
             <% if(currentUser){ %>
             <li>
+                <a href="/edit">
                 Hello, <%= currentUser.name() %>
+                </a>
             </li>
             <li>
                 <a href="/logout">
