--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,18 @@
         <ul class="nav navbar-nav navbar-right">
             <% if(currentUser){ %>
             <li>
-                <a href="/edit">
-                Hello, <%= currentUser.name() %>
+                <a href="javascript:void(0);">
+                    Hello, <%= currentUser.name() %>
+                </a>
+            </li>
+            <li>
+                <a id="create_group" href="javascript:void(0);">
+                    Create Group
+                </a>
+            </li>
+            <li>
+                <a id="join_group" href="javascript:void(0);">
+                    Join Group
                 </a>
             </li>
             <li>
@@ -52,7 +62,15 @@
     <% }); %>
 
     <!-- The list of the groups -->
-
+    <% if (groups) { %>
+    <% groups.forEach(function (group) { %>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <%= group.name() %>
+        </div>
+    </div>
+    <% }); %>
+    <% } %>
 </div>
 </body>
 <% include _footer.ejs %>
