--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -55,7 +55,7 @@
         <input type="text" class="form-control" name="username" placeholder="Username">
         <input type="text" class="form-control" name="mobile" placeholder="Mobile Number">
         <input type="text" class="form-control" name="email" placeholder="Email Id">
-        <input type="text" class="form-control" name="password" placeholder="Password">
+        <input type="password" class="form-control" name="password" placeholder="Password">
         <input type="submit" value="Sign Up" class="btn btn-primary btn-block">
     </form>
 </div>
