--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,7 @@
 <% include _header.ejs %>
+<!-- Include the scripts specific to this view here -->
+<script src="/javascripts/script.homepage.js" defer></script>
+</head>
 <body>
 
 <!-- Navigation Bar -->
