--- a/views/group.ejs
+++ b/views/group.ejs
@@ -1,4 +1,5 @@
 <% include _header.ejs %>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/script.groups.js" defer></script>
 <body>
 
